@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Cleaned up FRAME, CONTEXT, and FONT abstraction layers - Michael
 - Added Input Frames to pause code to stop infinite loops - Michael
 - Added more netplay debug code - SvdB
 - Added uio_fprintf() and uio_vfprintf() - SvdB
